--- a/src/main/resources/templates/guest.html
+++ b/src/main/resources/templates/guest.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Guest</title>
+    <link rel="stylesheet" href="gueststyle.css"/>
 </head>
 <body>
-$END$
+    <div>
+        <a href="/" class="button">Back</a>
+    </div>
+    <p>
+        Page is still under development! We will be online soon!
+    </p>
+    <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/97873-200.png"/>
 </body>
 </html>
