--- a/src/main/resources/templates/repairs.html
+++ b/src/main/resources/templates/repairs.html
@@ -8,9 +8,9 @@
 <nav>
     <ul>
         <li class="logo">Nordic Motorhomes</li>
-        <li><a href="fleet">Cars</a></li>
+        <li><a href="fleet">Fleet</a></li>
         <li><a href="reservations">Reservations</a></li>
-        <li><a href="reparations">Repairs</a></li>
+        <li><a href="repairs">Repairs</a></li>
     </ul>
 </nav>
 <div class="container">
