--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <link rel="stylesheet" href="loginstyle.css"/>
+    <title>Login</title>
 </head>
 <body>
-$END$
+<div class="container">
+    <h1>Signup</h1>
+    <form>
+
+        <p>Username:</p>
+        <input type="text" />
+        <p>Password:</p>
+        <input type="password"/>
+        <p>
+            <input type="submit" value="Login" class="button"/>
+        </p>
+    </form>
+</div>
+
 </body>
 </html>
