Some comments added to classes. Html files updated. Html files for customers created.

--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Repairs</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Customers</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <nav>
@@ -15,31 +15,28 @@
     </ul>
 </nav>
 <div class="container">
-    <h1> List of repairs</h1>
-    <a class="button">Add new repair</a>
+    <h1> List of customers</h1>
+    <a class="button">Add new customer</a>
     <table>
         <thead>
         <tr>
             <th>ID</th>
-            <th>Motorhome ID</th>
-            <th>problem</th>
-            <th>Status</th>
+            <th>Full name</th>
+            <th>Driving licence number</th>
+            <th>Reservation ID</th>
             <th></th>
-
         </tr>
         </thead>
 
         <tbody>
         <tr>
             <td>1</td>
-            <td>1</td>
-            <td>Fuel leaking</td>
-            <td>Done</td>
-            <td> <a class="button button-details">Details</a><a class="button button-update">Update</a><a class="button button-delete">Delete</a></td>
+            <td>Rasmus Olsen</td>
+            <td>123456789</td>
+            <a class="button button-update">Update</a><a class="button button-delete">Delete</a></td>
         </tr>
         </tbody>
     </table>
 </div>
-
 </body>
 </html>
