--- a/src/main/resources/templates/newrepair.html
+++ b/src/main/resources/templates/newrepair.html
@@ -4,6 +4,19 @@
     <title>New Repair</title>
 </head>
 <body>
+<form action="/create" method="post">
+
+    <p>Motorhome ID:</p>
+    <input type="text" name="motorhomeId" />
+    <p>Problem:</p>
+    <input type="text" name="problem" />
+    <p>Status:</p>
+    <input type="text" name="status" />
+    <p>
+        <input type="submit" value="Create" class="btn btn-create"/>
+    </p>
+</form>
+
 
 </body>
 </html>
