--- a/src/main/resources/templates/fleet.html
+++ b/src/main/resources/templates/fleet.html
@@ -10,6 +10,7 @@
         <li class="logo">Nordic Motorhomes</li>
         <li><a href="fleet">Fleet</a></li>
         <li><a href="reservations">Reservations</a></li>
+        <li><a href="customers">Customers</a></li>
         <li><a href="repairs">Repairs</a></li>
     </ul>
 </nav>
