--- a/src/main/resources/templates/newmotorhome.html
+++ b/src/main/resources/templates/newmotorhome.html
@@ -6,14 +6,14 @@
 <body>
 <form action="/create" method="post">
 
-    <p>First Name:</p>
-    <input type="text" name="name" />
-    <p>Last Name:</p>
-    <input type="text" name="lastName" />
-    <p>Enrollment date:</p>
-    <input type="date" name="enrollmentDate" />
-    <p>CPR:</p>
-    <input type="text" name="cpr" />
+    <p>Brand:</p>
+    <input type="text" name="brand" />
+    <p>Model:</p>
+    <input type="text" name="model" />
+    <p>Licence plate:</p>
+    <input type="text" name="licence plate" />
+    <p>Status:</p>
+    <input type="text" name="status" />
     <p>
         <input type="submit" value="Create" class="btn btn-create"/>
     </p>
