--- a/src/main/resources/templates/reservations.html
+++ b/src/main/resources/templates/reservations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Motorhomes</title>
+    <title>Reservations</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -10,6 +10,7 @@
         <li class="logo">Nordic Motorhomes</li>
         <li><a href="fleet">Fleet</a></li>
         <li><a href="reservations">Reservations</a></li>
+        <li><a href="customers">Customers</a></li>
         <li><a href="repairs">Repairs</a></li>
     </ul>
 </nav>
@@ -25,9 +26,9 @@
             <th>End Date</th>
             <th>Pick-up</th>
             <th>Drop-off</th>
-            <th>Extras</th>
+            <th>Accessories</th>
             <th>Price</th>
-            <th>Car_Id</th>
+            <th>Motorhome ID</th>
             <th>Status</th>
             <th></th>
         </tr>
