--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -33,7 +33,8 @@
             <td>1</td>
             <td>Rasmus Olsen</td>
             <td>123456789</td>
-            <a class="button button-update">Update</a><a class="button button-delete">Delete</a></td>
+            <td>1</td>
+            <td><a class="button button-update">Update</a><a class="button button-delete">Delete</a></td>
         </tr>
         </tbody>
     </table>
