MotorhomeManager i MotorhomeController draft created. newmotorhome html file slightly adjusted.

--- a/src/main/resources/templates/newmotorhome.html
+++ b/src/main/resources/templates/newmotorhome.html
@@ -4,7 +4,7 @@
     <title>New Motorhome</title>
 </head>
 <body>
-<form action="/create" method="post">
+<form action="/newmotorhome" method="post">
 
     <p>Brand:</p>
     <input type="text" name="brand" />
