--- a/src/main/resources/templates/reservations/reservations.html
+++ b/src/main/resources/templates/reservations/reservations.html
@@ -9,14 +9,14 @@
     <ul>
         <li class="logo">Nordic Motorhomes</li>
         <li><a href="fleet">Fleet</a></li>
-        <li><a href="reservations">Reservations</a></li>
+        <li><a href="">Reservations</a></li>
         <li><a href="customers">Customers</a></li>
         <li><a href="repairs">Repairs</a></li>
     </ul>
 </nav>
 <div class="container">
     <h1> List of reservations</h1>
-    <a class="button">Add new reservation</a>
+    <a class="button" href="/add_reservation">Add new reservation</a>
     <table>
         <thead>
         <tr>
