ReservationsController takes all input from website.

--- a/src/main/resources/templates/reservations/create/customer_data.html
+++ b/src/main/resources/templates/reservations/create/customer_data.html
@@ -10,7 +10,7 @@
     <p>Customer Name</p>
     <input type="text" name="customerName" />
     <p>Customer's driving license number</p>
-    <input type="number" name="drivingLicenceNr" />
+    <input type="text" name="drivingLicenseNr" />
     <p>
         <input type="submit" value="Continue" class="btn btn-create"/>
     </p>
