--- a/src/main/resources/templates/reservations/create/summary.html
+++ b/src/main/resources/templates/reservations/create/summary.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <p>Summary</p>
-<form method="get" action="/confirm">
+<form method="post" action="/confirm">
     <input type="button" value="Save" />
 </form>
+<a href="/confirm">Save</a>
 </body>
 </html>
