--- a/src/main/resources/templates/reservations/create/transport.html
+++ b/src/main/resources/templates/reservations/create/transport.html
@@ -9,12 +9,12 @@
 
     <p>Drop-off</p>
     <p>Distance</p>
-    <input type="text" name="dropoff_distance" />
+    <input type="text" value="0" name="dropoff_distance" />
     <p>Location</p>
     <input type="text" name="dropoff_location" />
     <p>Pick-up</p>
     <p>Distance</p>
-    <input type="text" name="pickup_distance" />
+    <input type="text"  value="0" name="pickup_distance" />
     <p>Location</p>
     <input type="text" name="pickup_location" />
     <p>
