--- a/src/main/resources/templates/reservations/create/summary.html
+++ b/src/main/resources/templates/reservations/create/summary.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <p>Summary</p>
-<form method="post" action="/confirm">
-    <input type="button" value="Save" />
-</form>
+<p th:text="${session.reservation.startDate}"></p>
 <a href="/confirm">Save</a>
 </body>
 </html>
