--- a/src/main/resources/templates/reservations/reservations.html
+++ b/src/main/resources/templates/reservations/reservations.html
@@ -21,7 +21,7 @@
         <thead>
         <tr>
             <th>ID</th>
-            <th>Customer's Name</th>
+            <th>Customer's ID</th>
             <th>Start Date</th>
             <th>End Date</th>
             <th>Pick-up</th>
@@ -37,7 +37,7 @@
         <tbody>
         <tr>
             <td>1</td>
-            <td>Rasmus Olsen</td>
+            <td>1</td>
             <td>12.06.2018</td>
             <td>20.06.2018</td>
             <td>Yes</td>
