--- a/src/main/resources/templates/reservations/create/available_motorhomes.html
+++ b/src/main/resources/templates/reservations/create/available_motorhomes.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <link rel="stylesheet" href="style.css"/>
     <title>Available Motorhomes</title>
 </head>
 <body>
-
+<nav>
+    <ul>
+        <li class="logo">Nordic Motorhomes</li>
+        <li><a href="fleet">Fleet</a></li>
+        <li><a href="">Reservations</a></li>
+        <li><a href="customers">Customers</a></li>
+        <li><a href="repairs">Repairs</a></li>
+    </ul>
+</nav>
+<div class="container">
 <table>
     <thead>
         <tr>
@@ -27,6 +37,6 @@
         </tr>
     </tbody>
 </table>
-
+</div>
 </body>
 </html>
