--- a/src/main/resources/templates/reservations/create/transport.html
+++ b/src/main/resources/templates/reservations/create/transport.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="style.css"/>
+    <title>Transport</title>
 </head>
 <body>
+<nav>
+    <ul>
+        <li class="logo">Nordic Motorhomes</li>
+        <li><a href="fleet">Fleet</a></li>
+        <li><a href="">Reservations</a></li>
+        <li><a href="customers">Customers</a></li>
+        <li><a href="repairs">Repairs</a></li>
+    </ul>
+</nav>
+<div class="container">
 <form action="/save_transport" method="post">
 
     <p>Drop-off</p>
@@ -21,5 +32,6 @@
         <input type="submit" value="Continue" class="btn btn-create"/>
     </p>
 </form>
+</div>
 </body>
 </html>
