--- a/src/main/resources/templates/reservations/reservations.html
+++ b/src/main/resources/templates/reservations/reservations.html
@@ -14,7 +14,7 @@
         <li><a href="repairs">Repairs</a></li>
     </ul>
 </nav>
-<div class="container">
+<div class="container" id="reservations">
     <h1> List of reservations</h1>
     <a class="button" href="/add_reservation">Add new reservation</a>
     <table>
@@ -39,14 +39,19 @@
             <td th:text="${reservation.reservationId}"></td>
             <td th:text="${reservation.customerId}"></td>
             <td th:text="${reservation.startDate}"></td>
-            <td th:text="${reservation.endDate}">2</td>
+            <td th:text="${reservation.endDate}"></td>
             <td th:text="${reservation.hasPickUp}"></td>
             <td th:text="${reservation.hasDropOff}"></td>
             <td th:text="${reservation.hasAccessories}"></td>
             <td th:text="${reservation.price}"></td>
             <td th:text="${reservation.motorhomeId}"></td>
             <td th:text="${reservation.status}"></td>
-            <td> <a class="button button-details">Details</a><a class="button button-update">Update</a><a class="button button-delete">Delete</a></td>
+            <td>
+                <a class="button button-details" th:href="'/details?reservation_id=' + ${reservation.reservationId}">Details</a>
+                <a class="button button-update" th:href="'/update?reservation_id=' + ${reservation.reservationId}">Update</a>
+                <a class="button button-delete" th:href="'/cancel?reservation_id=' + ${reservation.reservationId}">Cancel</a>
+                <a class="button" th:href="'/contract?reservation_id=' + ${reservation.reservationId}">Contract</a>
+            </td>
         </tr>
         </tbody>
     </table>
