--- a/src/main/resources/templates/guest.html
+++ b/src/main/resources/templates/guest.html
@@ -5,6 +5,15 @@
     <link rel="stylesheet" href="gueststyle.css"/>
 </head>
 <body>
+<nav>
+    <ul>
+        <li class="logo">Nordic Motorhomes</li>
+        <li><a href="/fleet">Fleet</a></li>
+        <li><a href="/reservations">Reservations</a></li>
+        <li><a href="/customers">Customers</a></li>
+        <li><a href="/repairs">Repairs</a></li>
+    </ul>
+</nav>
     <div>
         <a href="/" class="button">Back</a>
     </div>
