--- a/src/main/resources/templates/reservations/create/accessories.html
+++ b/src/main/resources/templates/reservations/create/accessories.html
@@ -9,10 +9,10 @@
 <nav>
     <ul>
         <li class="logo">Nordic Motorhomes</li>
-        <li><a href="fleet">Fleet</a></li>
-        <li><a href="">Reservations</a></li>
-        <li><a href="customers">Customers</a></li>
-        <li><a href="repairs">Repairs</a></li>
+        <li><a href="/fleet">Fleet</a></li>
+        <li><a href="/reservations">Reservations</a></li>
+        <li><a href="/customers">Customers</a></li>
+        <li><a href="/repairs">Repairs</a></li>
     </ul>
 </nav>
 <div class="container">
@@ -36,7 +36,7 @@
         </tr>
         </tbody>
     </table>
-    <input type="submit" name="Continue" />
+    <input type="submit" name="Save Reservation" />
 </form>
 </div>
 </body>
