--- a/src/main/resources/templates/reservations/create/summary.html
+++ b/src/main/resources/templates/reservations/create/summary.html
@@ -9,16 +9,62 @@
 <nav>
     <ul>
         <li class="logo">Nordic Motorhomes</li>
-        <li><a href="fleet">Fleet</a></li>
-        <li><a href="">Reservations</a></li>
-        <li><a href="customers">Customers</a></li>
-        <li><a href="repairs">Repairs</a></li>
+        <li><a href="/fleet">Fleet</a></li>
+        <li><a href="/reservations">Reservations</a></li>
+        <li><a href="/customers">Customers</a></li>
+        <li><a href="/repairs">Repairs</a></li>
     </ul>
 </nav>
 <div class="container">
-<p>Summary</p>
-<p th:text="${session.reservation.startDate}"></p>
-<a href="/confirm">Save</a>
+    <h1>Summary</h1>
+
+    <article>
+        <h2>Motorhome:</h2>
+        <p th:text="'ID: ' + ${motorhome.motorhomeId}">ID</p>
+        <p th:text="'License Plate: ' + ${motorhome.licencePlate}">License Plate</p>
+        <p th:text="'Brand: ' + ${motorhome.motorhomeDescription.brand}">Brand</p>
+        <p th:text="'Model: ' + ${motorhome.motorhomeDescription.model}">Model</p>
+        <p th:text="'Base Price: ' + ${motorhome.motorhomeDescription.basePrice}">Base Price</p>
+    </article>
+
+    <article>
+        <h2>Customer</h2>
+        <p th:text="'ID: ' + ${customer.customerId}"></p>
+        <p th:text="'Name:  ' + ${customer.customerName}"></p>
+        <p th:text="'Driving license no: ' + ${customer.drivingLicenseNr}"></p>
+    </article>
+
+    <article th:if="${reservation.hasPickUp}">
+        <h2>Pick-up</h2>
+        <p th:text="'Location: ' + ${pickup.pickUpLocation}"></p>
+        <p th:text="'Distance: ' + ${pickup.pickUpDistance}"></p>
+    </article>
+
+    <article th:if="${reservation.hasDropOff}">
+        <h2>Drop-off</h2>
+        <p th:text="'Location: ' + ${dropoff.dropOffLocation}"></p>
+        <p th:text="'Distance: ' + ${dropoff.dropOffDistance}"></p>
+    </article>
+
+    <h2>Accessories</h2>
+    <table>
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Price</th>
+            <th>quantity</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr th:each = "entry: ${accessories}">
+            <td th:text="${entry.key.name}"></td>
+            <td th:text="${entry.key.price}"></td>
+            <td th:text="${entry.value}"></td>
+        </tr>
+        </tbody>
+    </table>
+    <a href="/confirm">Save</a>
 </div>
 </body>
 </html>
