Reservation update implemented.

--- a/src/main/resources/templates/reservations/create/accessories.html
+++ b/src/main/resources/templates/reservations/create/accessories.html
@@ -36,7 +36,7 @@
         </tr>
         </tbody>
     </table>
-    <input type="submit" name="Save Reservation" />
+    <input type="submit" value="Save Reservation" />
 </form>
 </div>
 </body>
