--- a/src/main/resources/templates/reservations/update.html
+++ b/src/main/resources/templates/reservations/update.html
@@ -39,9 +39,9 @@
             </select>
         </article>
 
-        <h2>Price</h2>
+        <!--<h2>Price</h2>
         <p style="font-size: 0.6em">Won't be applied if there are changes to next sections</p>
-        <input th:value="${session.reservation.price}" name="price" />
+        <input th:value="${session.reservation.price}" name="price" />-->
 
         <h2>Pick-up</h2>
         <p>Distance</p>
