Calculate final reservation price implemented.

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -73,6 +73,7 @@ tr:nth-child(even){
     cursor: pointer;
     border-radius: 5px;
     text-align: center;
+    text-decoration: none;
 }
 
 .button:hover {
