--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -3,14 +3,18 @@ body{
     font-family: Montserrat, sans-serif;
 }
 
-.container {
+.container{
     width: 60vw;
     margin: 0 20vw;
 }
 
-#reservations {
+#reservations, #contract{
     width: 80vw;
     margin: 0 10vw;
+}
+
+#contract h1, h2 {
+    text-align: center;
 }
 
 ul {
