MotorhomeManager changed, new html files (about motorhomes) created, get/post mapping methods added to MotorhomeController.

--- a/src/main/resources/templates/fleet.html
+++ b/src/main/resources/templates/fleet.html
@@ -16,7 +16,7 @@
 </nav>
 <div class="container">
     <h1> List of motorhomes</h1>
-    <a href="/newmotorhome" class="button">Add new motorhome</a>
+    <a href="/add_motorhome" class="button">Add new motorhome</a>
     <table>
         <thead>
         <tr>
