--- a/src/main/resources/templates/create_description.html
+++ b/src/main/resources/templates/create_description.html
@@ -38,7 +38,7 @@
             <td th:text="${motorhomeDescription.model}"></td>
             <td th:text="${motorhomeDescription.capacity}"></td>
             <td th:text="${motorhomeDescription.basePrice}"></td>
-            <td> <a href="'/save_motorhomeDescription?description_id=' +${motorhomeDescription.motorhomeDescriptionId}" class="button button-details">Choose</a></td>
+            <td> <a th:href="'/save_motorhomeDescription?description_id=' +${motorhomeDescription.motorhomeDescriptionId}" class="button button-details">Choose</a></td>
         </tr>
         </tbody>
     </table>
