--- a/src/main/resources/static/homestyle.css
+++ b/src/main/resources/static/homestyle.css
@@ -1,4 +1,4 @@
-/*Alexandra*/
+/* @AlexandraCaragata */
 body{
     margin:0;
     background: url("http://www.freebiesgallery.com/wp-content/uploads/2014/02/dotted-world-map-vector-2.png") no-repeat center center fixed;
