Repairs implementing finished. Customers implementing finished.

--- a/src/main/resources/templates/customer/newcustomer.html
+++ b/src/main/resources/templates/customer/newcustomer.html
@@ -4,14 +4,12 @@
     <title>New Customer</title>
 </head>
 <body>
-<form action="/create" method="post">
+<form action="/new_customer" method="post">
 
     <p>Full name:</p>
-    <input type="text" name="fullName" />
+    <input type="text" name="customerName" />
     <p>Driving licence number:</p>
-    <input type="text" name="drivingLicenceNumber" />
-    <p>Reservation ID:</p>
-    <input type="text" name="reservationId" />
+    <input type="text" name="drivingLicenceNr" />
     <p>
         <input type="submit" value="Create" class="btn btn-create"/>
     </p>
