--- a/src/main/resources/templates/customer/customers.html
+++ b/src/main/resources/templates/customer/customers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>Customers</title>
     <link rel="stylesheet" href="style.css"/>
@@ -16,25 +16,24 @@
 </nav>
 <div class="container">
     <h1> List of customers</h1>
-    <a class="button">Add new customer</a>
+    <a class="button" href="/new_customer">Add new customer</a>
     <table>
         <thead>
         <tr>
             <th>ID</th>
             <th>Full name</th>
             <th>Driving licence number</th>
-            <th>Reservation ID</th>
             <th></th>
         </tr>
         </thead>
 
         <tbody>
-        <tr>
-            <td>1</td>
-            <td>Rasmus Olsen</td>
-            <td>123456789</td>
-            <td>1</td>
-            <td><a class="button button-update">Update</a><a class="button button-delete">Delete</a></td>
+        <tr th:each="customers: ${customers}">
+            <td th:text="${customers.customerId}"></td>
+            <td th:text="${customers.customerName}"></td>
+            <td th:text="${customers.drivingLicenceNr}"></td>
+            <td><a class="button button-update" th:href="'update_customer?customerId=' + ${customers.customerId}">Update</a>
+                <a class="button button-delete" th:href="'delete_customer?customerId=' + ${customers.customerId}">Delete</a></td>
         </tr>
         </tbody>
     </table>
