--- a/src/main/resources/templates/motorhomes/update_motorhome.html
+++ b/src/main/resources/templates/motorhomes/update_motorhome.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Update motorhome</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+<nav>
+    <ul>
+        <li class="logo">Nordic Motorhomes</li>
+        <li><a href="/fleet">Fleet</a></li>
+        <li><a href="/reservations">Reservations</a></li>
+        <li><a href="/customers">Customers</a></li>
+        <li><a href="/repairs">Repairs</a></li>
+    </ul>
+</nav>
+<div class="container">
+<h1>Update motorhome</h1>
+<form action="/update_motorhome" method="post">
+    <input type="hidden" th:value="${motorhome.motorhomeId}" name="motorhome_id">
+    <h2>Brand:</h2>
+    <input type="text" name="brand" th:value="${motorhome.motorhomeDescription.brand}" />
+    <h2>Model:</h2>
+    <input type="text" name="model" th:value="${motorhome.motorhomeDescription.model}"/>
+    <h2>Licence Plate:</h2>
+    <input type="text" name="licencePlate" th:value="${motorhome.licencePlate}"/>
+    <h2>Status:</h2>
+    <select name="motorhome_status">
+        <option th:each="status: ${statusList}" th:value="${status}" th:text="${status}"></option>
+    </select>
+    <h2>Base Price:</h2>
+    <input type="text" name="basePrice" th:value="${motorhome.motorhomeDescription.basePrice}"/>
+    <p><input type="submit" value="Update"></p>
+</form>
+</div>
 
 </body>
 </html>
