Logout added, database fixes, other minor bug fixes.

--- a/src/main/resources/templates/reservations/create/customer_data.html
+++ b/src/main/resources/templates/reservations/create/customer_data.html
@@ -21,7 +21,7 @@
     <p>Customer Name</p>
     <input type="text" name="customerName" />
     <p>Customer's driving license number</p>
-    <input type="text" name="drivingLicenseNr" />
+    <input type="text" name="drivingLicenceNr" />
     <p>
         <input type="submit" value="Continue" class="btn btn-create"/>
     </p>
