--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -38,6 +38,11 @@ li a {
     text-decoration: none;
 }
 
+#logout {
+    text-align: right;
+    margin-left: 40px;
+}
+
 li a:hover {
     background-color: #111;
 }
