--- a/src/main/resources/templates/repairs/repairs.html
+++ b/src/main/resources/templates/repairs/repairs.html
@@ -13,6 +13,7 @@
         <li><a href="../reservations">Reservations</a></li>
         <li><a href="customers">Customers</a></li>
         <li><a href="">Repairs</a></li>
+        <li id="logout"><a href="/logout" th:text="'Logout: ' + ${session.user.username}" th:unless="${session.user == null}">Logout</a></li>
     </ul>
 </nav>
 <div class="container">
